[package]
name = "getaway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["tokio"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.135"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "tokio-macros"] }
