[package]
name = "getaway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["tokio"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tokio-macros"] }
